@@ -19,6 +19,9 @@ WISH: load system-wide config file even if we don't have one
 WISH: look into XAddConnectionWatch, does anybody need that?
 DUMB: support tex fonts
 
+	- urxvt did not compile without frills enabled
+          (analysed by Matthew Rosewarne).
+
 9.06 Sat Nov  8 17:47:18 CET 2008
 	- NOTICE: this release updates terminfo/termcap.
         - updates libev to 3.48.
